# PiPAPo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  openocd.cfg  pico1-attach.gdb  pico1.gdb  pico1calc-attach.gdb  pico1calc.gdb  ppap-attach.gdb  ppap.gdb
cmake/: kernel_sources.cmake
docs/: PicoCalc-LCD.md  PicoCalc.md  PicoPiAndPortable-spec-v02.md  PicoPiAndPortable-spec-v03.md  PicoPiAndPortable-spec-v04.md  PicoPiAndPortable-spec-v06.md  PicoPiAndPortable-spec-v07.md  architecture.md  filesystems.md  phase0-plan.md  phase05-plan.md  phase06-plan.md  phase07-plan.md  phase09-plan.md  phase1-plan.md  phase10-plan.md  phase11-plan.md  phase2-plan.md  phase3-plan.md  phase4-plan.md  phase5-plan.md  phase6-plan.md  phase6-step5-syscall-gap.md  phase7-plan.md  phase8-plan.md  port-rogue.md  porting.md  procfs.md  spec-v07.md  syscall.md  userland-dev-guide.md
docs/history/: phase04-plan.md  phase09-plan.md  port-rogue.md
ldscripts/: pico1.ld  pico1calc.ld  ppap.ld  qemu.ld
romfs/etc/: fstab  inittab  motd  profile
scripts/: flash.sh  prepare_sd.sh  qemu-test.sh  qemu.sh  setup-toolchain.sh  test.sh  test_all_targets.sh
src/: config.h
src/board/: picocalc.h
src/boot/: stage1.S  startup.S
src/drivers/: clock.c  clock.h  fbcon.c  fbcon.h  font.h  i2c.c  i2c.h  kbd.c  kbd.h  lcd.c  lcd.h  sd.c  sd.h  spi.c  spi.h  spi_lcd.c  spi_lcd.h  uart.c  uart.h  uart_qemu.c
src/hw/: cortex_m0plus.h  rp2040.h
src/kernel/: errno.h  klog.c  klog.h  main.c  main_qemu.c  smp.c  smp.h  spinlock.h  xip_test.c  xip_test.h
src/kernel/blkdev/: blkdev.c  blkdev.h  loopback.c  loopback.h  ramblk.c  ramblk.h
src/kernel/exec/: elf.c  elf.h  exec.c  exec.h
src/kernel/fd/: fd.c  fd.h  file.h  pipe.c  tty.c  tty.h
src/kernel/fs/: devfs.c  devfs.h  fstab.c  fstab.h  procfs.c  procfs.h  romfs.c  romfs.h  romfs_format.h  tmpfs.c  tmpfs.h  ufs.c  ufs.h  ufs_format.h  vfat.c  vfat.h  vfat_format.h
src/kernel/mm/: kmem.c  kmem.h  mpu.c  mpu.h  page.c  page.h  xip.c  xip.h
src/kernel/proc/: proc.c  proc.h  sched.c  sched.h  switch.S
src/kernel/signal/: signal.c  signal.h
src/kernel/syscall/: svc.S  sys_fs.c  sys_io.c  sys_mem.c  sys_poll.c  sys_proc.c  sys_time.c  syscall.c  syscall.h
src/kernel/vfs/: namei.c  vfs.c  vfs.h
src/test/: ktest.c  ktest.h
tests/: CMakeLists.txt  test_elf.c  test_fd.c  test_kmem.c  test_page.c
tests/host/: CMakeLists.txt  test_framework.h
tests/host/stubs/: tty_stub.c  xip_stub.c
tests/kernel/: ktest.c
tests/stubs/: tty_stub.c  uart_stub.c
tests/user/: runtests.c  test_brk.c  test_orphan.c  test_pipe.c  utest.h
tools/: bdf2c.py  uf2sanitize.py
tools/mkfatimg/: mkfatimg.c
tools/mkromfs/: Makefile  mkromfs.c
tools/mkufs/: mkufs.c
tools/ufs_testdata/: hello.txt
user/: Makefile  crt0.S  getty.S  getty.c  hello.c  init.c  runtests.c  syscall.S  syscall.h  test_exec.c  test_fd.c  test_poll.c  test_signal.c  test_sleep_intr.c  test_vfork.c  ttyctl.c  user.ld
